--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@types/node": "15.0.0",
-    "@types/react": "17.0.4",
-    "@types/react-dom": "17.0.3",
-    "@types/styled-components": "5.1.9",
-    "babel-plugin-styled-components": "^1.12.0",
-    "typescript": "4.2.4",
     "@trivago/prettier-plugin-sort-imports": "^2.0.2",
     "@types/eslint": "^7.2.10",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/node": "15.0.0",
     "@types/prettier": "^2.2.3",
+    "@types/react": "17.0.4",
+    "@types/react-dom": "17.0.3",
+    "@types/styled-components": "5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "4.2.4",
+    "typesync": "^0.8.0"
   }
 }
