--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "brace-style": ["error", "1tbs"],
     "comma-dangle": ["error", "never"],
     "curly": "error",
-    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "indent": [0],
     "no-trailing-spaces": "error",
     "no-tabs": "error",
     "prefer-const": "error",
